tests/sumo/pedestrian_model/nonInteracting/errors/disconnected_route_ignore/tripinfos.sumo
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on Fri Nov 10 09:30:40 2017 by SUMO Version v0_31_0-1056-gab55b65
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
SPDX-License-Identifier: EPL-2.0
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <route-files value="input_routes.rou.xml"/>
    </input>

    <output>
        <fcd-output value="fcd.xml"/>
        <tripinfo-output value="tripinfos.xml"/>
    </output>

    <processing>
        <ignore-route-errors value="true"/>
        <pedestrian.model value="nonInteracting"/>
        <pedestrian.striping.dawdling value="0"/>
    </processing>

    <report>
        <xml-validation value="never"/>
        <no-step-log value="true"/>
    </report>

</configuration>
-->

<tripinfos xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/tripinfo_file.xsd">
    <personinfo id="p0" depart="0.00">
        <walk depart="0.00" departPos="78.65" arrival="16.00" arrivalPos="10.00" duration="16.00" routeLength="20.00" timeLoss="1.60" maxSpeed="1.39"/>
    </personinfo>
</tripinfos>
